# ullage

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md  Rakefile  STRUCTURE.md  azure-pipelines.yaml  build.rs  build.sh  index.html  justfile  requirements.txt  specs.py  specs.rb  style.css  tasks.py  thoughts.md
.ci/: Dockerfile  buildbase-pipelines.yaml  llvm.list
.github/: dependabot.yml
data-layout/: index.html
doc/: language_thoughts.md
docs/: 00-getting-started.md  10-syntax.md  12-parsing.md  15-data-layout.md  90-syntax-transforms.md  90-ullage-0.1.md  index.md  language_thoughts.md
getting-started/: index.html
llvmext/: lib.cpp  llvmext.hpp
parsing/: index.html
spec/: README.md  assignment.ulg  basics.ulg  basics.ulg.disabled  bool.ulg  collatz.ulg  compare.ulg  euler1.ulg  evens.ulg  factorial.ulg  factorial.ulg.disabled  fib.ulg  fizzbuzz.ulg  funcfact.ulg  functions.ulg  gcd.ulg  hello.ulg  hello_world.ulg  identity.ulg  if.ulg  literals.ulg  long_string.ulg  maybe_invert.ulg  modulus.ulg  operators.ulg  operators.ulg.disabled  prefix.ulg  printing.ulg  scopes.ulg  string_concat.ulg  types.ulg  undefined.ulg  until.ulg  variables.ulg  while.ulg
spec/bench/: README.md  fib.ulg
spec/fail/: README.md  assign_to_immutable.ulg  assign_to_undefined.ulg  badcalls.ulg  badvars.ulg  dupe_fn_param.ulg  if_else_badtypes.ulg  mismatched_assign.ulg  undefined.ulg  undefined_func.ulg  wrong_type_var.ulg
spec/malformed/: README.md  half_ternary.ulg  invalid_calls.ulg  missing_ident.ulg  param_missing_type.ulg  unexpected_plus.ulg  unterminated_bracket.ulg  unterminated_fn.ulg  unterminated_string.ulg  unterminated_string2.ulg  unterminated_string3.ulg
spec/unimplemneted/: README.md  array_types.ulg  tuple_types.ulg
src/: compile.rs  diag.rs  eval.rs  expression.rs  grammar.peg  low_loader.rs  main.rs  meta.rs  parse.rs  sem.rs  syntax.rs  token.rs  tokeniser.rs
src/compile/: error.rs  linker.rs  lower.rs  lower_context.rs  mod.rs  options.rs  string_builtins.rs
src/eval/: jit.rs  mod.rs  tree_walk.rs  value.rs
src/eval/jit/: low_loader.rs  mod.rs  value.rs
src/low_loader/: builder.rs  context.rs  function.rs  llvmext.rs  mod.rs  module.rs  pass_manager.rs  targets.rs  types.rs  value.rs
src/parse/: mod.rs  tokeniser.rs
src/sem/: binder.rs  mod.rs  operators.rs  sem_ctx.rs  trans_sess.rs  transform.rs  tree.rs  types.rs
src/syntax/: fn_builder.rs  mod.rs  node.rs  operators.rs  parse.rs  position.rs  syntax_builder.rs  syntaxfact.rs  text.rs  tree.rs  types.rs  visit.rs
src/syntax/ast/: expression.rs  mod.rs  token.rs  types.rs
syntax/: index.html
syntax-transforms/: index.html
ullage-0.1/: index.html
(+23 files in other folders)
