[package]
name = "ullage"
version = "0.1.0"
authors = ["Will Speak <will@willspeak.me>"]
description = "The Ullage Programming Language"
license = "MIT"
# documentation = "no public docs yet"
repository = "https://github.com/iwillspeak/ullage"
readme = "README.md"
keywords = [ "llvm", "parser", "compiler" ]
categories = [ "parsing" ]
edition = "2018"

[features]

# bitcode link feature outputs intermediate files as bitcode rather than
# LLMV IR.
bitcode_link = []

default = []

[dependencies]
llvm-sys = { version = "100", git = "https://gitlab.com/iwillspeak/llvm-sys.rs.git", branch = "macos-tbd-link" }
docopt = "1.1"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1"
failure = "0.1"
libc = "0.2"
indexmap = "1.5"
