[package]
name = "ullage"
version = "0.1.0"
authors = ["Will Speak <will@willspeak.me>"]
description = "The Ullage Programming Language"
license = "MIT"
# documentation = "no public docs yet"
repository = "https://github.com/iwillspeak/ullage"
readme = "README.md"
keywords = [ "llvm", "parser", "compiler" ]
categories = [ "parsing" ]
edition = "2018"

[features]
default = [ "llvm-9" ]

[dependencies]
llvm-9 = { package = "llvm-sys", version = "90", optional = true }
llvm-10 = { package = "llvm-sys", version = "100", optional = true }
docopt = "1.1"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1"
failure = "0.1"
libc = "0.2"
indexmap = "1.5"

[build-dependencies]
cc = "1.0"
bindgen = "0.53"